--- a/pages/manvelWeeks/week10.html
+++ b/pages/manvelWeeks/week10.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/friendswood.html">Friendswood </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -162,6 +165,7 @@
     <a href="/pages/galveston.html"> Galveston </a>
     <a href="/pages/mocity.html">Missouri City</a>
     <a href="/pages/jcgm.html">Jones Creek/Grand Mission</a>
+    <a href="/pages/friendswood.html">Friendswood</a>
   </footer>
 
   <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
