--- a/pages/manvelWeeks/week11.html
+++ b/pages/manvelWeeks/week11.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/friendswood.html">Friendswood </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -151,6 +154,7 @@
     <a href="/pages/galveston.html"> Galveston </a>
     <a href="/pages/mocity.html">Missouri City</a>
     <a href="/pages/jcgm.html">Jones Creek/Grand Mission</a>
+    <a href="/pages/friendswood.html">Friendswood</a>
   </footer>
 
 
