--- a/pages/manvel.html
+++ b/pages/manvel.html
@@ -40,6 +40,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/friendswood.html">Friendswood </a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -151,6 +154,7 @@
     <a href="galveston.html"> Galveston </a>
     <a href="mocity.html">Missouri City</a>
     <a href="jcgm.html">Jones Creek/Grand Mission</a>
+    <a href="friendswood.html">Friendswood</a>
   </footer>
 
 
