--- a/pages/manvelWeeks/week7.html
+++ b/pages/manvelWeeks/week7.html
@@ -41,6 +41,9 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission </a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/friendswood.html">Friendswood </a>
+          </li>
       </ul>
     </div>
   </nav>
