--- a/pages/sealy.html
+++ b/pages/sealy.html
@@ -36,6 +36,15 @@
           <li class="nav-item">
             <a class="nav-link" href="/pages/galveston.html">Galveston</a>
           </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/mocity.html">Missouri City</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/jcgm.html">Jones Creek/Grand Mission</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" href="/pages/friendswood.html">Friendswood</a>
+          </li>
       </ul>
     </div>
   </nav>
@@ -156,6 +165,7 @@
     <a href="galveston.html"> Galveston </a>
     <a href="mocity.html">Missouri City</a>
     <a href="jcgm.html">Jones Creek/Grand Mission</a>
+    <a href="friendswood.html">Friendswood</a>
   </footer>
 
 
