paginiation and other fixes

--- a/pages/friendswood.html
+++ b/pages/friendswood.html
@@ -52,8 +52,8 @@
 
   <div class="intro">
     <h1>Hermana Barton</h1>
-    <h2>Missouri City</h2>
-    <h2>March 21, 2021 - April 12, 2021</h2>
+    <h2>Friendswood</h2>
+    <h2>July 26, 2021 - August 16, 2021</h2>
   </div>
 
   <div class="areaContainer">
@@ -65,7 +65,7 @@
       <p id="longitude">Longitude: </p>
     </div>
   
-    <img src="/images/galveston/galvestonmap.png" width="80%">
+    <img src="/images/friendswood.PNG" width="80%">
   </div>
     
   
@@ -73,7 +73,7 @@
   
     <hr>
 
-  <h2>Week 55</h2>
+  <h2>Week 72</h2>
   <hr>
   <div class="container">
     
@@ -129,11 +129,12 @@
   </div>
 
   <div class="pagination_section">
-    <a href="/pages/galvestonWeeks/week54.html"><<</a>
-    <a href="/pages/mocity.html" class="active">55</a>
-    <a href="mocityWeeks/week56.html" >56</a>
-    <a href="mocityWeeks/week57.html" >57</a>
-    <a href="mocityWeeks/week56.html">>></a>
+    <a href="/pages/jcgmWeeks/week71.html"><<</a>
+    <a href="/pages/friendswood.html" class="active">72</a>
+    <a href="friendswoodWeeks/week73.html" >73</a>
+    <a href="friendswoodWeeks/week74.html" >74</a>
+    <a href="friendswoodWeeks/week75.html" >75</a>
+    <a href="friendswoodWeeks/week73.html">>></a>
 </div>
 
 
