--- a/pages/friendswoodWeeks/week75.html
+++ b/pages/friendswoodWeeks/week75.html
@@ -52,28 +52,14 @@
 
   <div class="intro">
     <h1>Hermana Barton</h1>
-    <h2>Missouri City</h2>
-    <h2>March 21, 2021 - April 12, 2021</h2>
+    <h2>Friendswood</h2>
+    <h2>July 26, 2021 - August 16, 2021</h2>
   </div>
 
-  <div class="areaContainer">
-    <div class="areaInfo">
-      <h2 id="cityName"></h2>
-      <p id="population">Population: </p>
-      <p id="elevation">Elevation: </p>
-      <p id="latitude">Latitude: </p>
-      <p id="longitude">Longitude: </p>
-    </div>
-  
-    <img src="/images/galveston/galvestonmap.png" width="80%">
-  </div>
-    
-  
-    <br><br>
   
     <hr>
 
-  <h2>Week 58</h2>
+  <h2>Week 75</h2>
   <hr>
   <div class="container">
     
@@ -169,11 +155,11 @@
   </div>
 
   <div class="pagination_section">
-    <a href="/pages/galvestonWeeks/week54.html"><<</a>
-    <a href="/pages/mocity.html" class="active">55</a>
-    <a href="mocityWeeks/week56.html" >56</a>
-    <a href="mocityWeeks/week57.html" >57</a>
-    <a href="mocityWeeks/week56.html">>></a>
+    <a href="week74.html"><<</a>
+    <a href="/pages/friendswood.html" >72</a>
+    <a href="week73.html" >73</a>
+    <a href="week74.html" >74</a>
+    <a href="week75.html" class="active">75</a>
 </div>
 
 
