--- a/pages/manvelWeeks/week15.html
+++ b/pages/manvelWeeks/week15.html
@@ -124,9 +124,9 @@
 
 
   <div class="pagination_section">
-    <a href="/pages/manvel.html"><<</a>
+    <a href="week14.html"><<</a>
     <a href="/pages/manvel.html" >6</a>
-    <a href="week7.html" class="active">7</a>
+    <a href="week7.html" >7</a>
     <a href="week8.html" >8</a>
     <a href="week9.html" >9</a>
     <a href="week10.html" >10</a>
@@ -134,10 +134,10 @@
     <a href="week12.html" >12</a>
     <a href="week13.html" >13</a>
     <a href="week14.html" >14</a>
-    <a href="week15.html" >15</a>
+    <a href="week15.html" class="active">15</a>
     <a href="week16.html" >16</a>
     <a href="week17.html" >17</a>
-    <a href="week8.html">>></a>
+    <a href="week16.html">>></a>
 </div>
 
 
