--- a/pages/mocityWeeks/week56.html
+++ b/pages/mocityWeeks/week56.html
@@ -123,9 +123,9 @@
   <div class="pagination_section">
     <a href="/pages/galvestonWeeks/week54.html"><<</a>
     <a href="/pages/mocity.html" >55</a>
-    <a href="mocityWeeks/week56.html" class="active">56</a>
-    <a href="mocityWeeks/week57.html" >57</a>
-    <a href="mocityWeeks/week57.html">>></a>
+    <a href="week56.html" class="active">56</a>
+    <a href="week57.html" >57</a>
+    <a href="week57.html">>></a>
 </div>
 
 
