--- a/pages/jcgmWeeks/week65.html
+++ b/pages/jcgmWeeks/week65.html
@@ -52,28 +52,14 @@
 
   <div class="intro">
     <h1>Hermana Barton</h1>
-    <h2>Missouri City</h2>
-    <h2>March 21, 2021 - April 12, 2021</h2>
+    <h2>Jones Creek/Grand Mission</h2>
+    <h2>April 12, 2021 - July 26, 2021</h2>
   </div>
 
-  <div class="areaContainer">
-    <div class="areaInfo">
-      <h2 id="cityName"></h2>
-      <p id="population">Population: </p>
-      <p id="elevation">Elevation: </p>
-      <p id="latitude">Latitude: </p>
-      <p id="longitude">Longitude: </p>
-    </div>
-  
-    <img src="/images/galveston/galvestonmap.png" width="80%">
-  </div>
-    
-  
-    <br><br>
   
     <hr>
 
-  <h2>Week 58</h2>
+  <h2>Week 65</h2>
   <hr>
   <div class="container">
     
@@ -144,11 +130,22 @@
   </div>
 
   <div class="pagination_section">
-    <a href="/pages/galvestonWeeks/week54.html"><<</a>
-    <a href="/pages/mocity.html" class="active">55</a>
-    <a href="mocityWeeks/week56.html" >56</a>
-    <a href="mocityWeeks/week57.html" >57</a>
-    <a href="mocityWeeks/week56.html">>></a>
+    <a href="week64.html"><<</a>
+    <a href="/pages/jcgm.html" >58</a>
+    <a href="week59.html" >59</a>
+    <a href="week60.html" >60</a>
+    <a href="week61.html" >61</a>
+    <a href="week62.html" >62</a>
+    <a href="week63.html" >63</a>
+    <a href="week64.html" >64</a>
+    <a href="week65.html" class="active">65</a>
+    <a href="week66.html" >66</a>
+    <a href="week67.html" >67</a>
+    <a href="week68.html" >68</a>
+    <a href="week69.html" >69</a>
+    <a href="week70.html" >70</a>
+    <a href="week71.html" >71</a>
+    <a href="week66.html">>></a>
 </div>
 
 
