--- a/pages/mocity.html
+++ b/pages/mocity.html
@@ -65,7 +65,7 @@
       <p id="longitude">Longitude: </p>
     </div>
   
-    <img src="/images/galveston/galvestonmap.png" width="80%">
+    <img src="/images/mocity.png" width="80%">
   </div>
     
   
