--- a/index.html
+++ b/index.html
@@ -107,6 +107,9 @@
     <a href="/pages/manvel.html"> Manvel </a>
     <a href="/pages/sealy.html"> Sealy </a>
     <a href="/pages/galveston.html"> Galveston </a>
+    <a href="/pages/mocity.html"> Missouri City </a>
+    <a href="/pages/jcgm.html"> Jones Creek/Grand Mission </a>
+    <a href="/pages/friendswood.html"> Friendswood </a>
   </footer>
 
 
