add slideshow about me page and get rid of some pics

--- a/pages/sealy.html
+++ b/pages/sealy.html
@@ -18,8 +18,14 @@
     </button>
     <div class="collapse navbar-collapse" id="navbarNav" >
       <ul class="navbar-nav" style="margin-left: auto;">
-        <li class="nav-item ">
-          <a class="nav-link" href="../index.html">Home</a>
+        <li class="nav-item active">
+          <a class="nav-link" href="../index.html">Home </a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/aboutMe.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/slideshow.html">Photos</a>
         </li>
         <li class="nav-item active">
           <a class="nav-link" href="/pages/mtc.html">MTC</a>
