--- a/index.html
+++ b/index.html
@@ -21,6 +21,12 @@
           <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/pages/aboutMe.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/slideshow.html">Photos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="/pages/mtc.html">MTC</a>
         </li>
         <li class="nav-item">
