--- a/pages/manvel.html
+++ b/pages/manvel.html
@@ -21,6 +21,12 @@
           <a class="nav-link" href="../index.html">Home </a>
         </li>
         <li class="nav-item">
+          <a class="nav-link" href="/pages/aboutMe.html">About Me</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/slideshow.html">Photos</a>
+        </li>
+        <li class="nav-item">
           <a class="nav-link" href="mtc.html">MTC</a>
         </li>
         <li class="nav-item">
