--- a/pages/sealyWeeks/week26.html
+++ b/pages/sealyWeeks/week26.html
@@ -21,6 +21,12 @@
         <li class="nav-item ">
           <a class="nav-link" href="/index.html">Home</a>
         </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/pages/aboutMe.html">About Me</a>
+        </li>
+        <li class="nav-item active">
+            <a class="nav-link" href="/pages/slideshow.html">Photos</a>
+          </li>
         <li class="nav-item active">
           <a class="nav-link" href="/pages/mtc.html">MTC <span class="sr-only">(current)</span></a>
         </li>
