--- a/pages/aboutMe.html
+++ b/pages/aboutMe.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -56,7 +57,34 @@
     </div>
   </nav>
 
+  <div class="aboutMe">
+      <p> My name is Lucy Barton. I was born in Logan, Utah, but spent most of my life in Herriman, Utah.</p>
+      <p>I attended Herriman High School where I swam on the swim team and sang in the choir. In high school, I took a few programming classes and decided I wanted to major in Computer Science at college.
+          I was accepted to BYU and began attending Summer Term, 2019.
+      </p>
+      <p>I recieved my mission call to the Texas Houston South Mission on December 10, 2019 and entered the MTC on March 11, 2020. After 16 days, the MTC was closed due to COVID-19 
+          and I flew to Houston three weeks earlier than I expected to. My mission was nothing like I expected it to be, but it was exactly what I needed to learn and grow the way that
+          God wanted me to. I went through a lot of hard days, weeks, and months on my mission, but I know that I am a lot better, stronger, and have a greater perspective than when I left on my mission. 
+      </p>
+      <p>
+          I returned home to Utah on August 16, 2021. I started classes at BYU again two weeks later. I hope to graduate with my Bachelor's degree in Computer Science by December, 2023. 
+          For most of my BYU experience, I have worked for BYU Office of Information Technology as a computer programmer, working with a team to develop and maintain applications for the university.
+          I recently accepted an internship at SimpleNexus starting May 2022.
+      </p>
+      <p>
+          My long term goals include marrying in the temple, getting a full-time software engineer position, owning a home, and starting a family. 
+      </p>
+  </div>
 
+  <div class="socialIcons">
+    <a href="https://www.facebook.com/lucy.barton.583/" class="fa fa-facebook"></a>
+    <a href="https://twitter.com/swimmerlucy963" class="fa fa-twitter"></a>
+    <a href="https://www.instagram.com/lucymbarton/" class="fa fa-instagram"></a>
+    <a href="https://www.pinterest.com/swimmerlucy963/" class="fa fa-pinterest"></a>
+    <a href="https://www.linkedin.com/in/lucy-b-b3639913a/" class="fa fa-linkedin"></a>
+    <a href="https://open.spotify.com/user/12179547625?si=644970126bb84a37" class="fa fa-spotify"></a>
+    <a href="#" class="fa fa-venmo"></a>
+  </div>
 
 
   <footer>
@@ -79,3 +107,34 @@
   </body>
 
 </html>
+<style>
+
+    /* Style all font awesome icons */
+    .fa {
+        color: black;
+        padding: 20px;
+        font-size: 30px;
+        width: 50px;
+        text-align: center;
+        text-decoration: none;
+        border-radius: 50%;
+        
+    }
+
+    /* Add a hover effect if you want */
+    .fa:hover {
+    opacity: 0.7;
+    text-decoration: none;
+    }
+
+    /* Set a specific color for each brand */
+
+   
+
+    .aboutMe {
+        margin-top: 2%;
+        width: 65%;
+        margin-left: auto;
+        margin-right: auto;
+    }
+</style>
