--- a/pages/galvestonWeeks/week54.html
+++ b/pages/galvestonWeeks/week54.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -84,7 +87,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos días!
+                      Buenos d&iacute;as!
                       <br><br>
                        This week was so stressful because of transfers! I was feeling burnt  out for a few days, but we made it through. Sadly, on Saturday night  we found out that I was going to be transfered to Missouri City! It  was something that I was not expecting to happen since I had only been  in Galveston for 2 transfers, and usually you'll stay in an area for  at least 3 or 4 transfers. But last week, I was thinking about it and  I thought that I might leave, (probably a prompting from the spirit)  so I was pretty mentally prepared for it. The Missouri City apartment  is in the same complex as the Manvel Hermanas, which is where I was  when I was training, so it will be a little bit like going home!  But... I'm supposed to be companions with Hermana Tea and she and her  companion got exposed to COVID this week and are showing symptoms.  They will get tested today. So for now, I am with Hermana Crandall in  Grand Mission, in an apartment complex that I have done exchanges in  multiple times, so it hasn't been too bad of a transfer experience so  far.
                        <br><br>
@@ -98,7 +101,7 @@
                        <br><br>
                        Wednesday was St. Patrick's day :) We had district council and  everyone wore green. Elder Ferrin brought banana chocolate chip bread.  We visited Sister McBride and she gave us these little decorative  stone turtles. Then we went and helped Sister Ferrin rake leaves. It  was a good day.
                        <br><br>
-                       Thursday we finally got to go over to a less-active member Sister  Calderón who has been having a lot of struggles lately. She talked to  us for about an hour about all that has been happening. Sister  Koopmans felt very strongly that we needed to teach her about tithing.  So we did, and she said that it's hard to pay tithing when you don't  know how you're going to pay your bills, but she has seen many  miracles come when she does pay her tithing.
+                       Thursday we finally got to go over to a less-active member Sister  Calder&oacute;n who has been having a lot of struggles lately. She talked to  us for about an hour about all that has been happening. Sister  Koopmans felt very strongly that we needed to teach her about tithing.  So we did, and she said that it's hard to pay tithing when you don't  know how you're going to pay your bills, but she has seen many  miracles come when she does pay her tithing.
                        <br><br>
                        Friday we had to drive up to Manvel! and pick up Hermana Seminario!  She spent the weekend with us. She has been travel training this  transfer, spending a few days with Sisters all over the mission. We  got her for her last 3 days on the mission. She goes home today! She  was trained by my trainer, so we are "Sisters". We taught Terry and  Hermana Lane. That night, Sister Barrett really wanted to feed us, but  we're not allowed to eat with members, but she asked if we could eat  it in the car and we didn't see why not. But she gave us this amazing  steak dinner with peas and quinoa and spinach salad and lemonade on  these big trays and we had to eat it in the car lol.
                        <br><br>
