--- a/pages/h8.html
+++ b/pages/h8.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles.css" />
   <title>My Mission</title>
@@ -106,7 +109,7 @@
                 <p>
                     Hola amigos y familia! 
                     <br><br>
-                    I have made it safely to Texas!! I flew out of SLC on Friday afternoon and arrived in Houston around 6 pm Texas time. I spent the night at the mission home and then met my companions the next day! My compañeras son Hermana Rich Y Hermana House. Son simpáticos. Hermana Rich is our trainer and Hermana House has been in the field for about a month. She reported to the MTC on January 29th of this month. 
+                    I have made it safely to Texas!! I flew out of SLC on Friday afternoon and arrived in Houston around 6 pm Texas time. I spent the night at the mission home and then met my companions the next day! My compañeras son Hermana Rich Y Hermana House. Son simp&aacute;ticos. Hermana Rich is our trainer and Hermana House has been in the field for about a month. She reported to the MTC on January 29th of this month. 
                     <br><br>
                     My Presidente took my phone for this first week so I can adjust easier. It's not been very difficult. We never leave our apartment except to exercise and get fresh air. I miss the MTC and walking around and socializing. I mostly miss my companion from the MTC. I wish she would have been reassigned to my mission and not the McAllen one. 
                     <br><br>
