--- a/pages/manvel.html
+++ b/pages/manvel.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles.css" />
   <title>My Mission</title>
@@ -104,7 +107,7 @@
         <div class="weekPart">
                  <div class="email">
                 <p>
-                    Buenas días amigos y familia!
+                    Buenas d&iacute;as amigos y familia!
                     <br><br>
                     This week has been rough, not gonna lie. I've been frustrated and bored and wishing I was home. I told my president that I was thinking about going home but all the temples are closed so I guess I'll stay here lol.
                     <br><br>
