--- a/pages/mocity.html
+++ b/pages/mocity.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -102,7 +105,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos días! Cómo están? 
+                      Buenos d&iacute;as! C&oacute;mo est&aacute;n? 
                       <br><br>
                       Another week, another area, another companion. 
                       <br><br>
@@ -122,7 +125,7 @@
                       <br><br>
                       Saturday we taught Gail and Michael who are from Scotand so it was so fun to listen to their accents! 
                       <br><br>
-                      Sunday we got 5 of our people at church!! But the bad news was that when we went out to drive to church, there was a big moving truck blocking our car and nobody was around. So we had to bike to church. In the pouring rain. Lol we showed up to church absolutely soaked but at least we got there. We had a lot of meetings because they're over 2 wards in this area. I shared my testimony in our second sacrament meeting and a little girl got up after me and thanked me for coming to their ward 😭
+                      Sunday we got 5 of our people at church!! But the bad news was that when we went out to drive to church, there was a big moving truck blocking our car and nobody was around. So we had to bike to church. In the pouring rain. Lol we showed up to church absolutely soaked but at least we got there. We had a lot of meetings because they're over 2 wards in this area. I shared my testimony in our second sacrament meeting and a little girl got up after me and thanked me for coming to their ward 
                       <br><br>
                       Spiritual thought: 
                       Alma 24:19
