--- a/pages/sealyWeeks/week22.html
+++ b/pages/sealyWeeks/week22.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -85,13 +88,13 @@
         <div class="weekPart">
                  <div class="email">
                 <p>
-                    Buenos días mis amigos! 
+                    Buenos d&iacute;as mis amigos! 
                     <br><br>
-                    Cómo están?
+                    C&oacute;mo est&aacute;n?
                     <br><br>
                     This week was another week living in the middle of the middle of nowhere. 
                     <br><br>
-                    On last Monday we met with a man in the church named Adrián. He and his family have been going through A LOT but that means they're ready to find some peace and happiness in the gospel!! And he speaks Spanish!!
+                    On last Monday we met with a man in the church named Adri&aacute;n. He and his family have been going through A LOT but that means they're ready to find some peace and happiness in the gospel!! And he speaks Spanish!!
                     <br><br>
                     Tuesday we had another devotional with Hank Smith! He talked about the Holy Ghost and how we can tell when we are feeling it. It was really good. Basically if we ever just want to be good people or want to tell the truth or be nice then THAT'S the Holy Ghost talking to us! Pretty cool. 
                     <br><br>
