--- a/pages/galvestonWeeks/week48.html
+++ b/pages/galvestonWeeks/week48.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -84,7 +87,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos Días! 
+                      Buenos D&iacute;as! 
                       <br><br>
                       Another week and another transfer gone! I am now starting my eighth transfer as a full-time missionary! Hermana Koopmans and I are both staying here in Galveston for another 6 weeks. 
                       <br><br>
