--- a/pages/galvestonWeeks/week50.html
+++ b/pages/galvestonWeeks/week50.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -84,7 +87,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos días. 
+                      Buenos d&iacute;as. 
                       <br><br>
                       We had a pretty eventful week out here. It started last Monday when it snowed about 0.2 inches of ice pellets and then freezing temperatures continued until about Thursday. Apparently the power companies were not prepared for the cold spell and a lot of people lost power and a lot of pipes froze and burst and so a lot of people lost water and if they did have water it was contaminated. The stores were closed for a while because they didn't have water and there was no gas on the whole island! They had to shut water off to the entire island because the water pressure was getting too low and they were really concerned about having water at the hospital. So pretty eventful week! 
                       <br><br>
