--- a/pages/galvestonWeeks/week52.html
+++ b/pages/galvestonWeeks/week52.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -84,7 +87,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos Días!
+                      Buenos D&iacute;as!
                       <br><br>
                        This week was amazing. Last P day we tried to go fishing with the  district but it didn't really work out lol no one caught anything. We  went to this restaurant called Shrimp N Stuff and it was SO good.
                        <br><br>
