--- a/pages/galvestonWeeks/week53.html
+++ b/pages/galvestonWeeks/week53.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -84,7 +87,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos días! Como están? 
+                      Buenos d&iacute;as! Como est&aacute;n? 
                       <br><br>
                       A year has gone by and I still feel like a new missionary sometimes. But I am trying to come to terms with the fact that it will all end and I actually will go home. It's a strange thought since I always thought 18 months would never go by. 
                       <br><br>
