--- a/pages/jcgmWeeks/week63.html
+++ b/pages/jcgmWeeks/week63.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -88,7 +91,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                        Buenos días. 
+                        Buenos d&iacute;as. 
                         <br><br>
                         This week was long. But good. Last Monday we were able to play a game of laser tag, went to In n Out Burger, and then played basketball in the pouring rain (In a covered court that eventually got flooded lol) There was the biggest rainbow after the rain stopped. :) 
                         <br><br>
