--- a/pages/manvelWeeks/week9.html
+++ b/pages/manvelWeeks/week9.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -107,7 +110,7 @@
                     <br><br>
                     How are you all??  Please email me I'm lonely!!! There's nothing fun to do here except read emails during the week and I literally only got 1! I am so bored.
                     <br><br>
-                    La hermana en la silla plástica 
+                    La hermana en la silla pl&aacute;stica 
                     (The sister in the plastic chair)
                     <br><br><br>
                     Hermana Barton
