--- a/pages/mocityWeeks/week57.html
+++ b/pages/mocityWeeks/week57.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -90,7 +93,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos días! 
+                      Buenos d&iacute;as! 
                       <br><br>
                       It was another relatively slow week in Missouri City. Although I got news last night that I'm going to be ET'd (Emergency Transferred) back to the Jones Creek/Grand Mission area. Apparently the Hermanas there could not get along. 😬 I'm fine with going back there, I liked it while I was there, but Hermana Crandall goes home in 3 weeks so I'm going to have to take over the area and I'll likely be there for the rest of my mission. And it's an English area. I absolutely love speaking Spanish so going to an English area hurts. But President Guthrie said he's going to buy some English name tags for me and that he feels like I'll be able to help the area a lot. So it'll be a new adventure, even though it will be hard. 
                       <br><br>
