--- a/pages/sealy.html
+++ b/pages/sealy.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="../styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -100,7 +103,7 @@
             <div class="weekPart">
                      <div class="email">
                     <p>
-                      Buenos días a todos! 
+                      Buenos d&iacute;as a todos! 
                       <br><br>
                       I got transferred last night! I am now in Sealy with Hermana West. She is very nice and actually 23! She's also taller than me which is weird after spending 3 months with companions shorter than me. 
                       <br><br>
