--- a/pages/sealyWeeks/week21.html
+++ b/pages/sealyWeeks/week21.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
@@ -85,7 +88,7 @@
         <div class="weekPart">
                  <div class="email">
                 <p>
-                    Buenos días! 
+                    Buenos d&iacute;as! 
                     <br><br>
                     This week was crazy and boring. The most exciting part was that on Tuesday we went to the Chiropractor for Hermana West's back! The chiropractor we go to is a member and lets all the missionaries get treatments for free so I got some too! They shocked us with the Tens unit (sp?) And gave us massages and cracked our backs and then we layed on these message tables and they put big inflatable boots on us lol. It was awesome! Afterwards we got Panda Express! 😋
                     <br><br>
