--- a/pages/sealyWeeks/week23.html
+++ b/pages/sealyWeeks/week23.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -85,7 +88,7 @@
         <div class="weekPart">
                  <div class="email">
                 <p>
-                    Buenos días familiares y amigos!
+                    Buenos d&iacute;as familiares y amigos!
                     <br><br>
                      Last p day we went biking in Katy in the middle of the day and it was  so hot but so fun to actually be with other people lol. I have the  worst farmers tan and watch tan line.
                      <br><br>
