--- a/pages/sealyWeeks/week28.html
+++ b/pages/sealyWeeks/week28.html
@@ -2,7 +2,10 @@
 <html>
 
 <head>
-  <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+ <meta name="viewport" content="user-scalable=no,width=device-width,initial-scale=1,minimum-scale=1,maximum-scale=1">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Delius&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
   <link rel="stylesheet" href="/styles.css" />
   <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
@@ -93,7 +96,7 @@
                   <br><br>
                   On Tuesday a drunk man called me beautiful for the first time. 
                   <br><br>
-                  In our District Council this week for our roleplay we pretended to ask someone to be baptized. Also the ZLs brought us Kolaches. It was pretty inspired since that night we taught our new friends Nandy and Karla the Restoration and then asked them to be baptized!!! They accepted!! They said "Sería bonita, si?" They have a date for October 25th!
+                  In our District Council this week for our roleplay we pretended to ask someone to be baptized. Also the ZLs brought us Kolaches. It was pretty inspired since that night we taught our new friends Nandy and Karla the Restoration and then asked them to be baptized!!! They accepted!! They said "Ser&iacute;a bonita, si?" They have a date for October 25th!
                   <br><br>
                   On Thursday we were out trying to have a lesson but it fell through so we tried to contact some people and none of that really went very well... But when we went to visit one of the men we contacted on Thursday on Saturday and he wasn't there, we met another family who was actually interested! The mom's name is Sonia and she can't drive since in the country she came from it was just easier to take the bus everywhere. But we taught her and her family The Gospel of Jesus Christ and they really liked it!
                   <br><br>
