--- a/pages/h8.html
+++ b/pages/h8.html
@@ -109,7 +109,7 @@
                 <p>
                     Hola amigos y familia! 
                     <br><br>
-                    I have made it safely to Texas!! I flew out of SLC on Friday afternoon and arrived in Houston around 6 pm Texas time. I spent the night at the mission home and then met my companions the next day! My compañeras son Hermana Rich Y Hermana House. Son simp&aacute;ticos. Hermana Rich is our trainer and Hermana House has been in the field for about a month. She reported to the MTC on January 29th of this month. 
+                    I have made it safely to Texas!! I flew out of SLC on Friday afternoon and arrived in Houston around 6 pm Texas time. I spent the night at the mission home and then met my companions the next day! My compa&ntilde;eras son Hermana Rich Y Hermana House. Son simp&aacute;ticos. Hermana Rich is our trainer and Hermana House has been in the field for about a month. She reported to the MTC on January 29th of this month. 
                     <br><br>
                     My Presidente took my phone for this first week so I can adjust easier. It's not been very difficult. We never leave our apartment except to exercise and get fresh air. I miss the MTC and walking around and socializing. I mostly miss my companion from the MTC. I wish she would have been reassigned to my mission and not the McAllen one. 
                     <br><br>
