--- a/pages/jcgmWeeks/week62.html
+++ b/pages/jcgmWeeks/week62.html
@@ -95,7 +95,7 @@
                         <br><br>
                         This week was pretty good. 
                         <br><br>
-                        Monday we played pickleball and it was super fun except that it was like 90 degrees and 100% humidity. But, we went to lunch at this Mexican place called Las Mañanitas and it got some chicken enchiladas and they were good :) 
+                        Monday we played pickleball and it was super fun except that it was like 90 degrees and 100% humidity. But, we went to lunch at this Mexican place called Las Ma&ntilde;anitas and it got some chicken enchiladas and they were good :) 
                         <br><br>
                         Tuesday I hit 14 months as a missionary. A member got us Pablo's for dinner (a really fancy Mexican restaurant right next to our apartment). 
                         <br><br>
