--- a/pages/manvelWeeks/week10.html
+++ b/pages/manvelWeeks/week10.html
@@ -114,7 +114,7 @@
                     <br><br>
                     We went on a couple bike rides in the neighborhood by our complex this week and it's a cute little neighborhood. Pics to come. 
                     <br><br>
-                    On Sunday Obispo brought us the Sacrament! It has been hard for us to get the sacrament since members aren't technically supposed to come into our apartment according to our stake president but our bishop got special permission. Also I prayed on Saturday night that someone would bring us some food and some members (the peñas) brought us WhataBurger for lunch! (On Sunday... yeah but it was good)
+                    On Sunday Obispo brought us the Sacrament! It has been hard for us to get the sacrament since members aren't technically supposed to come into our apartment according to our stake president but our bishop got special permission. Also I prayed on Saturday night that someone would bring us some food and some members (the pe&ntilde;as) brought us WhataBurger for lunch! (On Sunday... yeah but it was good)
                     <br><br>
                     So that's my week! Here's my spiritual thought. In Come Follow Me this week we are still studying in Mosiah. I love the example of the people of Alma in Mosiah 24:14-16. 
                     <br><br>
