--- a/pages/manvelWeeks/week12.html
+++ b/pages/manvelWeeks/week12.html
@@ -113,7 +113,7 @@
                      <br><br>
                      For movie night we watched the first half of 17 miracles.
                      <br><br>
-                     On Sunday we got the Sacrament from la familia Peña and they brought us food! It was really good food. And it was great to get the sacrament! It was awkward because they really weren't supposed to stay for very long but they stayed for a long time. We sang 3 hymns all the way through and they shared their testimonies and everything. It was awkward because they wouldn't look at me because I guess they thought I couldn't understand anything but I really understood like 95% of it so it was just kinda rude of them to not look at me. :\ We disinfected everything after they left.
+                     On Sunday we got the Sacrament from la familia Pe&ntilde;a and they brought us food! It was really good food. And it was great to get the sacrament! It was awkward because they really weren't supposed to stay for very long but they stayed for a long time. We sang 3 hymns all the way through and they shared their testimonies and everything. It was awkward because they wouldn't look at me because I guess they thought I couldn't understand anything but I really understood like 95% of it so it was just kinda rude of them to not look at me. :\ We disinfected everything after they left.
                      <br><br>
                      So that's my week!
                      <br><br>
